fix: overflow issue on beer page

--- a/frontend-beer-frontier/src/app/pages/beers/home.component.scss
+++ b/frontend-beer-frontier/src/app/pages/beers/home.component.scss
@@ -2,13 +2,15 @@
   display: flex;
   flex-direction: column;
   justify-self: center;
+  overflow: hidden;
+  width: 100%;
 }
 
 .beer-filters {
   display: flex;
   justify-content: center;
   width: 100%;
-  margin: 30px;
+  margin: 30px 0;
 }
 
 .search-input {
@@ -49,13 +51,14 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  margin: 15px;
+  margin: 15px 0;
 }
 
 .button-container {
   width: 90%;
   display: flex;
   justify-content: flex-end;
+  margin: 30px 0;
 }
 
 .beer-card {
